# CollabNote

./: .env.example  pyproject.toml
app/: config.py  main.py
app/api/: dependancies.py  router.py
app/api/routers/: user.py
app/api/schemas/: user.py
app/core/: config.py  security.py  utils.py
app/data/: mongodb.py  postgresql.py
app/model/: user.py
app/service/: user.py
migrations/: env.py
migrations/versions/: 10bebe4c5f80_add_is_active_in_user.py  1926ec280943_adduniqueinemail.py  c913a6125b10_add_user_table.py
