[project]
name = "collabnote"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "fastapi[standard]>=0.136.1",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pip>=26.1.1",
]
